# RustMiniProjects

ReactionGame/: Cargo.toml
ReactionGame/src/: leaderboard.rs  main.rs
ReactionGame/static/: game.html  index.html  style.css
RegistrationForm/: Cargo.toml
RegistrationForm/src/: main.rs
RegistrationForm/templates/: register.html
calculatorApp/: Cargo.toml
calculatorApp/src/: main.rs
rustDb/: Cargo.toml
rustDb/.sqlx/: query-68073fb4815dab309c28f17975118c972075006a19ea5abe544dc1643a0f338c.json
rustDb/src/: .env  cli.rs  db.rs  main.rs  model.rs
rust_scraper/: Cargo.toml  articles.csv
rust_scraper/src/: main.rs
wordCounter/: Cargo.toml  file1.txt  file2.txt  file3.txt
wordCounter/src/: main.rs
