[package]
name = "rustDb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
inquire = "0.7.5"
serde = {version = "1.0.219", features=["derive"]}
sqlx = {version ="0.8.6", features=["mysql", "runtime-tokio", "macros"]}
tokio = {version ="1.47.0", features=["full"]}
